# nextlevelcodeblog-back

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  nginx.conf
.cargo/: config.toml
.github/workflows/: dev-ci.yml  prod-deploy.yml
migrations/: 20250221134409_tables.sql
sql/: news_posts_queries.sql  post_comments_queries.sql  users_queries.sql
src/: app.rs  config.rs  errors.rs  lib.rs  main.rs  middleware.rs
src/domains/: mod.rs
src/domains/auth/: handle.rs  model.rs  query.rs  repository.rs  service.rs
src/domains/posts/: handle.rs  model.rs  query.rs  repository.rs  service.rs
src/domains/private/: handle.rs  mod.rs  repository.rs  service.rs
src/domains/recaptcha/: mod.rs  model.rs  service.rs
src/domains/users/: handle.rs  mod.rs  model.rs  query.rs  repository.rs  service.rs
src/infrastructure/: db.rs  mod.rs
src/infrastructure/mail/: mails.rs  sendmail.rs
src/infrastructure/mail/templates/: RestPassword-email.html  Verification-email.html  Welcome-email.html
src/tasks/: expired_token.rs  mod.rs
src/utils/: mod.rs
tests/: auth.rs  google_users.rs  news_post.rs  private.rs  users.rs
tests/common/: constants.rs  fixtures.rs  mod.rs  test_state.rs
