[package]
name = "backend_nextlevelcodeblog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend_nextlevelcodeblog" # Binary target name
path = "src/main.rs"               # Path to the entry point

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = [] }
async-trait = "0.1.85"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
lettre = "0.11.7"
moka = { version = "0.12.10", features = ["sync", "future"] }
once_cell = "1.21.3"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }
thiserror = "2.0.12"
time = { version = "0.3.37", features = [
    "formatting",
    "macros",
    "serde",
    "parsing",
] }
tokio = { version = "1.43.0", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["trace", "fs", "cors", "auth"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
urlencoding = "2.1.3"
uuid = { version = "1.12.1", features = ["v7", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[build-dependencies]
sqlx = { version = "0.8.3", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }

[dev-dependencies]
axum-test = "17.3.0"
